# mac-akaza

./: Cargo.toml  Info.plist  Makefile  README.md
resources/: akaza.icns  akaza.tiff
src/: imk.rs  main.rs
